fix layout shift on categories

--- a/src/Components/Categories/Category/Category.scss
+++ b/src/Components/Categories/Category/Category.scss
@@ -33,7 +33,7 @@
   display: grid;
   color: #fff;
   grid-template-columns: auto 1fr;
-  gap: 5px;
+  gap: 0.4rem;
   align-items: center;
   width: auto;
   margin-right: 10px;
